[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "royal_flush"
version = "0.1.0"
description = "Royal Flush is a Python framework specifically designed to facilitate the development, execution and analysis of multi-agent systems (MAS) experiments."
readme = "README.rst"
authors = [
  {name = "Francisco Enguix", email = "enguixfco@gmail.com"}
]
maintainers = [
  {name = "Francisco Enguix", email = "enguixfco@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/FranEnguix/royal_flush/issues"
changelog = "https://github.com/FranEnguix/royal_flush/blob/master/changelog.md"
homepage = "https://github.com/FranEnguix/royal_flush"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

